更新部分代码